# agentic_kb

./: .gitignore  AGENTS.md  CLAUDE-SKILL-SETUP.md  CODEX-SKILL-SETUP.md  GIT_WORKFLOWS.md  INSTRUCTIONS.md  KNOWLEDGE_CONVENTIONS.md  PARENT_PROJECT_TEMPLATE.md  QUICK-FAISS-WORKFLOW.md  QUICK-TYPESENSE-WORKFLOW.md  README.md  docx-page-numbering-pandoc.md  kb-search.skill  page-numbering-implementation.md  pyproject.toml
.obsidian/: app.json  graph.json  workspace.json
codex-skills/: kb-search.skill
codex-skills/kb-search/: SKILL.md
knowledge/: ooxml-manipulation-techniques.md
knowledge/Android/: _index.md  aiims-odk-collect-customizations.md  android-common-pitfalls.md  android-device-owner-kiosk-gotchas.md  android-strictmode-and-encryption.md  gradle-build-compatibility.md  medres-odk-collect-customizations.md  odk-collect-core.md  odk-module-refactoring.md  product-flavors-separate-builds.md
knowledge/DevOps/: _index.md  garage-s3-compatible-storage.md
knowledge/Development Tools/: _index.md  bd-beads-dolt-troubleshooting.md  better-auth-installation.md  better-auth-plugins.md  better-auth-sveltekit-integration.md  drizzle-kit-check.md  drizzle-kit-generate.md  drizzle-kit-pull.md  drizzle-kit-push.md  drizzle-kit-up.md  drizzle-orm-goodies.md  drizzle-orm-migrations.md  standard-schema-validation.md  (+62 more)
scripts/: index_kb.py  index_typesense.py  recommend_setup.py  search.py  search_typesense.py  setup_kb.sh  smart_search.ps1  smart_search.sh  update_kb.ps1  update_kb.sh
skills/: CLAUDE-SKILL-SETUP.md  CODEX-SKILL-SETUP.md  USE-SKILLS.md  kb-search.skill
(+119 files in other folders)
